# REI1

./: .gitignore  Design.md  INTENT.txt  LICENSE  README.md  USAGE.txt  error_handling.py  interpreter.py  main.py  parsing.py  pyproject.toml  pytest.ini  semantics.py  std.rei1  stdlib.py  utilities.py
examples/: AntiExamples.txt  actos.rei1  advanced.rei1  basic.rei1  complex.rei1  data_structures.rei1  demo2.rei1  features.rei1  functions.rei1  modules.rei1  parallel.rei1  pattern_matching.rei1  simple.rei1  simple2.rei1
test/: conftest.py  debug_lang.py  demo_file.txt  feature_test.py  test_adt.rei1  test_basic.py  test_complex_expressions.txt  test_concurrency.py  test_contracts.py.disabled  test_contracts_minimal.py.disabled  test_desugar.rei1  test_file.txt  test_integration.py  test_multi.rei1  test_new_stdlib.rei1  test_parmap_debug.py  test_partial.rei1  test_placeholder.rei1  test_repl.sh  test_repl_input.txt  test_type.rei1  test_unsafe.rei1  test_unsafe_fail.rei1
